--- a/src/main/index.adoc
+++ b/src/main/index.adoc
@@ -1,16 +1,16 @@
 ---
-title: Eclipse Che Documentation
-keywords: landing, index, introduction, overview, home
+title: Eclipse Che 文档
+keywords: 入口, 索引, 介绍, 概要, 主页
 #sidebar: che_docs_home
 sidebar: none
 toc: false
 permalink: index.html
 folder: 
-summary: Eclipse Che is a developer workspace server and cloud IDE
+summary: Eclipse Che 是提供给开发者使用的工作空间服务器和云IDE
 ---
 
 [id="documentation-versions"]
-== Documentation versions
+== 文档版本
 
-* link:{{ site.baseurl }}che-6/index.html[Che 6 Documentation]
-* link:{{ site.baseurl }}che-7/index.html[Che 7 Beta Documentation]
+* link:{{ site.baseurl }}che-6/index.html[Che 6 文档]
+* link:{{ site.baseurl }}che-7/index.html[Che 7 Beta 文档]
