--- a/src/main/pages/che-6/overview/quick-start.adoc
+++ b/src/main/pages/che-6/overview/quick-start.adoc
@@ -9,62 +9,60 @@ folder: che-6/overview
 ---
 
 1
-Eclipse Che is a developer workspace server and cloud IDE. You install, run, and manage Eclipse Che with with different container orchestration engines such as Docker or OpenShift.
+Eclipse Che是开发者工作空间服务器和云IDE。你可以使用不同的容器编排引擎（如Docker或OpenShift）安装、运行和管理Eclipse Che。
 
-Eclipse Che is available in two modes:
+Eclipse Che有两种可用的方式：
 
-* *Single-user*: This is suited for personal desktop environments.
-* *Multi-user*: This is an advanced setup for Che and is for organizations and developer teams.
-
-See link:single-multi-user[Single and Multi-User Che] to learn more. The quick starts are for single-user mode.
+* *单用户*: 这适用于个人桌面环境。
+* *多用户*: 这是适用于组织和开发者团队的，一种高级安装方式。
 
 [id="docker"]
-== Running single-user Che on Docker
+== 在Docker上以单用户方式运行Che
 
-.Prerequisites
+.前提条件
 
-* Latest Docker version installed (Docker 17+).
-* On macOS, create an IP alias. In a terminal, run:
+* 已安装最新的Docker(Docker 17+)
+* 在macOS，创建IP别名(IP alias)。在终端中，运行：
 +
 ----
 # ifconfig la0 alias $IP
 ----
 +
-Where `$IP` is found either in *Preferences > Advanced > Docker subnet*, or run
+有两种可以获得 `$IP` 的方式，通过 *Preferences > Advanced > Docker subnet* 或者运行
 +
 ----
 $ docker run --rm --net host eclipse/che-ip:nightly
 ----
 
-.Procedure
+.过程
 
-To run Che in single-user mode, enter:
+为在单用户模式运行Che，输入：
 
 ----
 $ docker run -ti -v /var/run/docker.sock:/var/run/docker.sock -v /local/path:/data eclipse/che start
 ----
 
-Note that `/local/path` can be any path on your local machine where you want to store Che data and projects.
+需注意 `/local/path` 可以是在你本机机器上的任何路径，它是你想存储Che数据和项目的地方。
 
-.Next steps
+.下一步
 
-link:creating-starting-workspaces[Create and start your first workspace], import a link:ide-projects[project], and link:commands-ide-macro[build and run] your project.
+link:creating-starting-workspaces[创建和启动你第一个工作空间], 导入一个 link:ide-projects[项目], 并 link:commands-ide-macro[构建和运行] 你的项目。
 
-.Additional resources
+.其它的资料
 
-* link:docker-single-user.html[Single-user on Docker]
-* link:docker-multi-user.html[Multi-user on Docker]
-* link:docker-config.html[Configuration on Docker]
-* link:docker-cli.html[Che CLI for Docker]
+* link:docker-single-user.html[Docker上的单用户]
+* link:docker-multi-user.html[Docker上的多用户]
+* link:docker-config.html[Docker上的配置]
+* link:docker-cli.html[Docker上的Che CLI]
 
 [id="openshift"]
-== Running single-user Che on OpenShift
+== 在OpenShift上运行单用户的Che
 
-.Prerequisities
+.前提条件
 
-* Use the latest version of https://docs.openshift.org/latest/minishift/getting-started/index.html[MiniShift]. See https://github.com/minishift/minishift-addons/tree/master/add-ons/che[MiniShift add-on for Che].
+* 使用最新版本的 https://docs.openshift.org/latest/minishift/getting-started/index.html[MiniShift]. 参见 https://github.com/minishift/minishift-addons/tree/master/add-ons/che[MiniShift add-on for Che].
 
-To run Che in single-user mode on Minishift, use:
+为在Minishift上以单用户模式运行Che，执行：
 
 ----
 $ git clone https://github.com/minishift/minishift-addons
@@ -76,19 +74,19 @@ $ minishift addons apply \
     che
 ----
 
-.Next steps
+.下一步
 
-link:creating-starting-workspaces.html[Create and start your first workspace], import a link:ide-projects.html[project], and link:commands-ide-macro.html[build and run] your project.
+link:creating-starting-workspaces.html[创建和启动你的首个 workspace], 导入一个 link:ide-projects.html[project], and link:commands-ide-macro.html[构建和运行] 你的project。
 
-.Additional resources
+.其它的资料
 
-* link:openshift-single-user.html[Single-user on OpenShift]
-* link:openshift-multi-user.html[Multi-user on OpenShift]
-* link:openshift-config.html[Configuration on OpenShift]
+* link:openshift-single-user.html[OpenShift上的单用户模式]
+* link:openshift-multi-user.html[OpenShift上的多用户模式]
+* link:openshift-config.html[OpenShift上的配置]
 
-See the following resources for more information on the Openshift variants supported by Che:
+下面的资料是Che提供的关于OpenShift变体的更多信息：
 
-* https://www.openshift.com/container-platform/index.html[OpenShift Container Platform (OCP)]: OpenShift on-premise, which you can install in your Data Center.
-* https://www.openshift.com/features/index.html[OpenShift Online (OSO)]: On-Demand OpenShift hosted on public cloud and managed by Red Hat.
-* https://access.redhat.com/products/openshift-dedicated-red-hat/[OpenShift Dedicated (OCD)]: Enterprise public cloud with your own OpenShift cluster managed by Red Hat.
-* https://www.openshift.org/minishift/[MiniShift]: OpenShift running on your local environment.
+* https://www.openshift.com/container-platform/index.html[OpenShift Container Platform (OCP)]: 用于在你数据中心内安装的OpenShift on-premise.
+* https://www.openshift.com/features/index.html[OpenShift Online (OSO)]: 托管于公有云由Red Hat管理的随需提供的OpenShift.
+* https://access.redhat.com/products/openshift-dedicated-red-hat/[OpenShift Dedicated (OCD)]: 带有你专有OpenShift集群的由Red Hat管理的企业公有云.
+* https://www.openshift.org/minishift/[MiniShift]: 在你本地环境运行OpenShift.
