--- a/src/main/pages/che-6/developer-guide/framework-overview.adoc
+++ b/src/main/pages/che-6/developer-guide/framework-overview.adoc
@@ -10,13 +10,13 @@ folder: che-6/developer-guide
 
 
 [id="introduction"]
-== Introduction
+== 介绍
 
-Eclipse Che is a platform that can be extended by:
+Eclipse Che是一个可以通过如下的方式进行扩展的平台：
 
-* adding client side plugins that bring new menus, panels and other UI components, link:ide-extensions-gwt.html[authored in GWT]
-* adding link:server-side-extensions.html[server side components and agents] that get deployed to a workspace machines
-* adding support of link:spi_overview.html[new infrastructure]
-* enable language tooling via link:language-servers.html[Language Servers]
+* 通过客户端侧的插件增加新的菜单，面板和其它的UI组件， link:ide-extensions-gwt.html[GWT制作] 
+* 增加部署到工作空间机器中的link:server-side-extensions.html[服务器端的组件和代理]
+* 增加支持link:spi_overview.html[新的基础设施]
+* 通过 link:language-servers.html[语言服务器]使语言工具可用
 
-On top of that Eclipse Che can be integrated into other platforms since it exposes link:rest-api.html[REST APIs] for all server side components which makes it possible to create on demand workspaces serving needs of CI, support, issue tracking and other systems.
+在此基础上，Eclipse Che还可以集成到其他平台中，因为它为所有服务器端组件公开了link:rest-api.html[RESTAPI]，这使得可以根据需要创建工作空间，以满足CI、支持、问题跟踪和其他系统的需求。
