--- a/src/main/pages/che-6/developer-guide/che-in-che-quickstart.adoc
+++ b/src/main/pages/che-6/developer-guide/che-in-che-quickstart.adoc
@@ -1,5 +1,5 @@
 ---
-title: Develop Your First Plugin Usign Che
+title: 通过Che开发您的第一个插件(Plugin)
 sidebar: che_6_docs
 keywords: dev docs, developer docs, plugins, extensions
 tags: [extensions, dev-docs, assembly]
@@ -8,23 +8,23 @@ redirect_from: che-in-che-quickstart.html
 folder: che-6/developer-guide
 ---
 
-Before you dive into information on how you can link:framework-overview.html[extend Che framework] and build your own Che link:assemblies.html[assembly], let’s install and debug your first Che plugin using Che itself.
+在深入了解如何link:framework-overview.html[扩展Che框架]和建立自己的Chelink:assemblies.html[程序集]之前，让我们使用Che本身安装和调试第一个Che插件。
 
 [id="run-eclipse-che"]
-== Run Eclipse Che
+== 运行Eclipse Che
 
-* Installing it on Docker: link:docker-single-user.html[Single-user] or link:docker-multi-user.html[Multi-user]
-* Installing it on OpenShift: link:openshift-single-user.html[Single-user] or link:openshift-multi-user.html[Multi-user]
+* 在Docker上安装Che: link:docker-single-user.html[单用户] 或 link:docker-multi-user.html[多用户]
+* 在OpenShift上安装Che: link:openshift-single-user.html[单用户] or link:openshift-multi-user.html[多用户]
 
 [id="create-workspace-and-sample-extension"]
-== Create Workspace and Sample Extension
+== 创建工作空间和示例扩展
 
-Search for a stack by keyword `che` and choose `che-ide-server-extension` as a sample project. This extension is both IDE and server side extension. It will bring a new menu item, an action to the IDE and a notification returned from a simple REST service.
+通过关键字 `Che` 搜索栈(stack)，并选择 `che-ide-server-extension` 作为示例项目。此扩展既是IDE也是服务端的扩展。它带有新的菜单项、对IDE的操作(Action)以及从简单REST服务返回的通知(notification)。
 
 image::devel/create_extension.png[]
 
 [id="build-a-deploy-your-extension"]
-== Build a Deploy Your Extension
+== 构建部署扩展
 
 When the project shows up in project explorer, you will find 2 main Maven modules: `assembly` (See: link:assemblies.html[Assemblies]) and plugins (containing plugins themselves).
 
